--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,14 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+input {
+    outline: none;
 }
 
 html,
