--- a/src/app/shared/components/main-input/main-input.component.scss
+++ b/src/app/shared/components/main-input/main-input.component.scss
@@ -1,72 +1,71 @@
 @import "variables";
 
 :host {
-  display: block;
+   display: block;
 }
 
-.box-input {
-  display: flex;
-  flex-direction: column;
-  position: relative;
+.box-input{
+   display: flex;
+   flex-direction: column;
+   position: relative;
+   
+   label{
+      top: 12px;
+      left: 13px;
+      padding: 0px 5px;
+      position: absolute;
+      color: $color-base-500;
+      font-size: $text-base;
+      background-color: #fafafa;
+      font-family: $font-family-secondary;
+      transition: 0.2s ease;
+      
+      &:hover{
+         cursor: text;
+      }
+   }
 
-  label {
-    top: 12px;
-    left: 15px;
-    padding: 0px 5px;
-    position: absolute;
-    color: $color-base-500;
-    font-size: $text-base;
-    background-color: #fafafa;
-    font-family: $font-family-secondary;
-    transition: $animate-duration $animate-keyframe;
+   input{
+      padding: 10px 13px;
+      background-color: #fafafa;
+      border-radius: 7px;
+      border: 2px solid #e0e0e0;
+      font-size: $text-base;
+      font-family: $font-family-tertiary;
+      line-height: 1.4;
+      word-spacing: 3px;
+      transition: 0.3s;
+      color: $color-base-600;
 
-    &:hover {
-      cursor: text;
-    }
-  }
+      &.invalid {
+         border-color: rgb(230, 0, 20);
+      }
 
-  input {
-    padding: 11px 17px;
-    background-color: #fafafa;
-    border-radius: 7px;
-    border: 2px solid #e0e0e0;
-    font-size: calc($text-base + 1px);
-    font-family: $font-family-tertiary;
-    line-height: 1.4;
-    word-spacing: 3px;
-    transition: 0.3s;
-    color: $color-base-600;
+      &:focus, &:valid{
+         border: 2px solid $color-base-300;
+      }
+      
+      &:focus ~ label,
+      &:valid ~ label,
+      &:disabled ~ label {
+         color: $color-primary-900;
+         transform: translateY(0%);
+         background: linear-gradient(to bottom, transparent 50%, #fafafa 0%);
+         font-size: $text-sm;
+         top: -11px;
+      }
+   }
 
-    &.invalid {
-      border-color: rgb(230, 0, 20);
-    }
-
-    &:focus,
-    &:valid {
-      border: 2px solid $color-base-300;
-    }
-
-    &:focus~label,
-    &:valid~label,
-    &:disabled~label {
-      color: $color-primary;
-      transform: translateY(0%);
-      background: linear-gradient(to bottom, transparent 50%, #fafafa 0%);
-      font-size: $text-sm;
-      top: -11px;
-    }
-  }
-
-  .error-span-component {
-    margin-top: 18px;
-    margin-bottom: -5px;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
+   .error-span-component {
+      margin-top: 18px;
+      margin-bottom: -5px;
+      width: -moz-fit-content;
+      width: fit-content;
+   }
 }
 
 @media (max-width: 560px) {
-  .box-input input {
-    padding: 12px 17px;
-  }
+   .box-input input {
+      padding: 12px 17px;
+   }
 }
