--- a/src/app/shared/components/main-input/main-input.component.scss
+++ b/src/app/shared/components/main-input/main-input.component.scss
@@ -15,7 +15,7 @@
       padding: 0px 5px;
       position: absolute;
       color: $color-base-500;
-      font-size: $text-base;
+      font-size: $text-sm;
       background-color: #fafafa;
       font-family: $font-family-secondary;
       transition: 0.2s ease;
