feat: Ajustando alguns espaçamentos do LoginTemplateComponent

--- a/src/app/modules/auth/components/templates/login-template/login-template.component.html
+++ b/src/app/modules/auth/components/templates/login-template/login-template.component.html
@@ -1,7 +1,7 @@
 <section>
     <app-card-container [noPadding]="true" class="card-container">
         <div class="card-head">
-
+            <app-arrow-redirect></app-arrow-redirect>
         </div>
         <app-separator-row></app-separator-row>
         <div class="content">
