--- a/src/app/modules/auth/components/templates/login-template/login-template.component.scss
+++ b/src/app/modules/auth/components/templates/login-template/login-template.component.scss
@@ -15,7 +15,7 @@ section {
     max-width: 375px;
     
     .card-head {
-      padding: 10px;
+      padding: 10px 13px 7px;
     }
 
     .title {
@@ -23,7 +23,7 @@ section {
     }
 
     .form {
-      margin: 25px 0;
+      margin: 30px 0 35px;
     }
 
     .box-buttons {
