--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,16 @@ html,
 body {
     height: 100%;
 }
+
+.flex {
+    display: flex;
+
+    &-column {
+        @extend .flex;
+        flex-direction: column;
+    }
+}
+
+.align {
+    align-items: center;
+}
