refactor: Renomeando o componente LoginTemplateComponent por AuthTemplateComponent

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<app-login-template>
+<app-auth-template>
     <ng-container title>
         <app-title-1>Entre com a sua conta</app-title-1>
     </ng-container>
@@ -18,4 +18,4 @@
     <ng-container buttons>
         <app-button-main-action [fullWidth]="true">LOGIN</app-button-main-action>
     </ng-container>
-</app-login-template>
+</app-auth-template>
