--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<app-login-template>
+<app-auth-template>
     <ng-container title>
         <app-title-1>Crie sua conta</app-title-1>
     </ng-container>
@@ -19,4 +19,4 @@
     <ng-container buttons>
         <app-button-main-action [fullWidth]="true">CADASTRAR</app-button-main-action>
     </ng-container>
-</app-login-template>
+</app-auth-template>
