feat: Adicionando o HighlightLinkComponent na página de login e de cadastro

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -3,7 +3,7 @@
         <app-title-1>Entre com a sua conta</app-title-1>
     </ng-container>
     <ng-container description>
-        <app-paragraph>Insira o e-mail e a senha que você definiu ao criar a sua conta. Não tem conta? Clique aqui para
+        <app-paragraph>Insira o e-mail e a senha que você definiu ao criar a sua conta. Não tem conta? <app-highlight-link routerLinkValue="../cadastro">Clique aqui</app-highlight-link> para
             criar uma.</app-paragraph>
     </ng-container>
     <ng-container form>
