--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -3,7 +3,7 @@
         <app-title-1>Crie sua conta</app-title-1>
     </ng-container>
     <ng-container description>
-        <app-paragraph>Preencha os dados e clique em cadastrar. Já tem conta? Clique aqui para entrar.</app-paragraph>
+        <app-paragraph>Preencha os dados e clique em cadastrar. Já tem conta? <app-highlight-link routerLinkValue="../login">Clique aqui</app-highlight-link> para entrar.</app-paragraph>
     </ng-container>
     <ng-container form>
         <form class="flex-column">
