refactor: Usando classes padrôes

--- a/src/app/modules/auth/components/templates/auth-template/auth-template.component.html
+++ b/src/app/modules/auth/components/templates/auth-template/auth-template.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="flex align">
     <app-card-container [noPadding]="true" class="card-container">
         <div class="card-head">
             <app-arrow-redirect></app-arrow-redirect>
