--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -6,11 +6,12 @@
         <app-paragraph>Preencha os dados e clique em cadastrar. Já tem conta? <app-highlight-link routerLinkValue="../login">Clique aqui</app-highlight-link> para entrar.</app-paragraph>
     </ng-container>
     <ng-container form>
-        <form class="flex-column">
-            <app-main-input placeholder="Nome" [control]="tempControl"></app-main-input>
-            <app-main-input placeholder="Email ou telefone" [control]="tempControl"></app-main-input>
-            <app-main-input type="password" placeholder="Senha" [control]="tempControl"></app-main-input>
-            <app-main-input type="password" placeholder="Confirmar Senha" [control]="tempControl"></app-main-input>
+        <form [formGroup]="form" class="flex-column">
+            <app-main-input placeholder="Nome" [control]="form.controls.tempControl"></app-main-input>
+            <app-register-type-switch [formControl]="registerType"></app-register-type-switch>
+            <app-main-input [placeholder]="registerType.value ? 'Email' : 'Telefone'" [control]="form.controls.tempControl"></app-main-input>
+            <app-main-input type="password" placeholder="Senha" [control]="form.controls.tempControl"></app-main-input>
+            <app-main-input type="password" placeholder="Confirmar Senha" [control]="form.controls.tempControl"></app-main-input>
         </form>
     </ng-container>
     <ng-container response>
