--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -7,15 +7,15 @@
             criar uma.</app-paragraph>
     </ng-container>
     <ng-container form>
-        <form class="flex-column">
-            <app-main-input placeholder="Email ou telefone" [control]="tempControl"></app-main-input>
-            <app-main-input type="password" placeholder="Senha" [control]="tempControl"></app-main-input>
+        <form [formGroup]="form" class="flex-column">
+            <app-main-input formControlName="email" placeholder="Email ou telefone" [control]="form.controls.email"></app-main-input>
+            <app-main-input formControlName="password" type="password" placeholder="Senha" [control]="form.controls.password"></app-main-input>
         </form>
     </ng-container>
     <ng-container response>
-
+        
     </ng-container>
     <ng-container buttons>
-        <app-button-main-action [fullWidth]="true">LOGIN</app-button-main-action>
+        <app-button-main-action (onCLick)="onSubmit()" [fullWidth]="true">LOGIN</app-button-main-action>
     </ng-container>
 </app-auth-template>
