--- a/src/app/modules/create-project/pages/create-project/create-project.component.html
+++ b/src/app/modules/create-project/pages/create-project/create-project.component.html
@@ -1,5 +1,5 @@
 <app-single-container>
-   <app-title-1>Criar Projeto</app-title-1>
+   <app-title-1 class="title">Criar Projeto</app-title-1>
    <div class="content">
       <router-outlet></router-outlet>
    </div>
