feat: Finalizando a página DetailsComponent

--- a/src/app/modules/create-project/pages/details/details.component.html
+++ b/src/app/modules/create-project/pages/details/details.component.html
@@ -1,4 +1,11 @@
 <div class="box-input flex-column">
+   <div class="box-project-image flex align">
+      <app-profile-image-input class="project-image" idValue="project-image"></app-profile-image-input>
+      <div class="flex-column image-description">
+         <app-paragraph>Adicione uma imagem ao projeto</app-paragraph>
+         <app-paragraph>(opcional)</app-paragraph>
+      </div>
+   </div>
    <app-main-input [control]="temp" placeholder="Título"></app-main-input>
    <app-textarea [control]="temp" placeholder="Descrição" [optional]="true"></app-textarea>
 </div>
