--- a/src/app/shared/components/main-input/main-input.component.scss
+++ b/src/app/shared/components/main-input/main-input.component.scss
@@ -4,12 +4,29 @@
    display: block;
 }
 
-.box-input{
+.box-input {
    display: flex;
    flex-direction: column;
    position: relative;
-   
-   label{
+
+   &.white {
+
+      label {
+         background-color: $color-base-100;
+      }
+
+      input {
+         background-color: $color-base-100;
+
+         &:focus~label,
+         &:valid~label,
+         &:disabled~label {
+            background: linear-gradient(to bottom, transparent 50%, $color-base-100 0%);
+         }
+      }
+   }
+
+   label {
       top: 12px;
       left: 13px;
       padding: 0px 5px;
@@ -19,13 +36,13 @@
       background-color: #fafafa;
       font-family: $font-family-secondary;
       transition: 0.2s ease;
-      
-      &:hover{
+
+      &:hover {
          cursor: text;
       }
    }
 
-   input{
+   input {
       padding: 10px 13px;
       background-color: #fafafa;
       border-radius: 7px;
@@ -41,19 +58,21 @@
          border-color: rgb(230, 0, 20);
       }
 
-      &:focus, &:valid{
+      &:focus,
+      &:valid {
          border: 2px solid $color-base-300;
       }
-      
-      &:focus ~ label,
-      &:valid ~ label,
-      &:disabled ~ label {
+
+      &:focus~label,
+      &:valid~label,
+      &:disabled~label {
          color: $color-primary-900;
          transform: translateY(0%);
          background: linear-gradient(to bottom, transparent 50%, #fafafa 0%);
          font-size: $text-sm;
          top: -11px;
       }
+
    }
 
    .error-span-component {
