--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -19,7 +19,7 @@ $color-secondary-900: #191F25;
 
 $color-base-100: white;
 $color-base-200: #fffefc;
-$color-base-300: #d9d5cc;
+$color-base-300: #e7e7e7;
 $color-base-400: #6e6e6e;
 $color-base-500: #5f5f5f;
 $color-base-600: #4d4d4d;
