feat: Implementando a função para deletar o  email

--- a/src/app/modules/create-project/pages/members/members.component.html
+++ b/src/app/modules/create-project/pages/members/members.component.html
@@ -9,7 +9,12 @@
 
 <div class="content">
     <ul class="email-list">
-        <li *ngFor="let email of memberEmailList; trackBy: trackByService.track; index as i"><span>{{i + 1}}</span> {{email}}</li>
+        <li class="flex align" *ngFor="let email of memberEmailList; trackBy: trackByService.track; index as i"><span>{{i + 1}}</span>
+            <p>{{email}}</p>
+            <app-dropdown-menu>
+                <app-menu-button (onClick)="removeEmail(email)" [primaryIcon]="['far','trash-can']" [status]="statusEnum.Warn">Deletar</app-menu-button>
+            </app-dropdown-menu>
+        </li>
     </ul>
     <div class="box-buttons flex align">
         <app-step-button routerLink="../detalhes" [back]="true">Voltar</app-step-button>
