feat: Finalizando a IconsSidebarComponent

--- a/src/app/modules/core/components/icons-sidebar/icons-sidebar.component.html
+++ b/src/app/modules/core/components/icons-sidebar/icons-sidebar.component.html
@@ -1,1 +1,26 @@
-<div>asd</div>
+<aside class="flex-column">
+   <nav>
+      <ul class="flex-column align">
+         <li>
+            <a>
+               <fa-icon [icon]="['far', 'chart-bar']"></fa-icon>
+            </a>
+         </li>
+         <li>
+            <a>
+               <fa-icon icon="list-check"></fa-icon>
+            </a>
+         </li>
+         <li>
+            <a class="active">
+               <fa-icon [icon]="['far', 'bell']"></fa-icon>
+            </a>
+         </li>
+      </ul>
+   </nav>
+   <div class="config">
+      <a>
+         <fa-icon icon="gear"></fa-icon>
+      </a>
+   </div>
+</aside>
