--- a/src/app/modules/core/pages/home/home.component.html
+++ b/src/app/modules/core/pages/home/home.component.html
@@ -1,2 +1,4 @@
 <app-icons-sidebar class="icon-sidebar"></app-icons-sidebar>
-<app-sidebar></app-sidebar>
+<div class="content">
+   <router-outlet></router-outlet>
+</div>
