--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -14,7 +14,7 @@ $color-secondary-300: #ADAFB2;
 $color-secondary-400: #95979A;
 $color-secondary-500: #616569;
 $color-secondary-600: #42474C;
-$color-secondary-700: #242A30;
+$color-secondary-700: #323a47;
 $color-secondary-900: #191F25;
 
 $color-base-100: white;
