--- a/src/app/modules/task/pages/tasks/tasks.component.html
+++ b/src/app/modules/task/pages/tasks/tasks.component.html
@@ -2,4 +2,9 @@
    <ng-container searchInput>
       <app-search-input placeholder="Buscar tarefas"></app-search-input>
    </ng-container>
+   <ng-container content>
+      <div class="task-list flex-column">
+         <app-sidebar-task-card *ngFor="let task of taskList; trackBy: trackByService.track" [task]="task"></app-sidebar-task-card>
+      </div>
+   </ng-container>
 </app-sidebar>
