--- a/src/app/shared/components/search-input/search-input.component.scss
+++ b/src/app/shared/components/search-input/search-input.component.scss
@@ -36,7 +36,7 @@
 
   fa-icon {
     position: absolute;
-    color: $color-primary-900;
+    color: $color-secondary-500;
     right: 16px;
     top: 50%;
     transform: translateY(-48%);
