feat: Ajustando espaçamentos

--- a/src/app/modules/auth/components/templates/auth-template/auth-template.component.html
+++ b/src/app/modules/auth/components/templates/auth-template/auth-template.component.html
@@ -21,7 +21,7 @@
                 <ng-content select="[response]"></ng-content>
             </div>
 
-            <div class="buttons">
+            <div class="box-buttons">
                 <ng-content select="[buttons]"></ng-content>
             </div>
         </div>
