feat: Recebendo o addButton na sidebar

--- a/src/app/shared/components/sidebars/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebars/sidebar/sidebar.component.scss
@@ -22,6 +22,10 @@ aside {
         font-weight: 500;
       }
 
+      .add-button {
+        margin-right: 10px;
+      }
+
       button {
         padding: 11px 7px;
         border-radius: 5px;
