--- a/src/app/shared/components/sidebars/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebars/sidebar/sidebar.component.html
@@ -2,6 +2,9 @@
    <div class="aside-header">
       <div class="content flex align">
          <h1>{{title}}</h1>
+         <div class="add-button">
+            <ng-content select="[addButton]"></ng-content>
+         </div>
          <button>
             <fa-icon icon="chevron-left"></fa-icon>
          </button>
