--- a/src/app/shared/components/buttons/add-button/add-button.component.scss
+++ b/src/app/shared/components/buttons/add-button/add-button.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import "variables";
 
 :host {
   display: block;
@@ -14,6 +14,12 @@ button {
   height: 40px;
   justify-content: center;
   aspect-ratio: 1/1;
+
+  &.smaller {
+    height: 31px;
+    border-radius: 5px;
+    font-size: $text-sm;
+  }
 
   &:hover {
     cursor: pointer;
