feat: Adicionando o addButton na página de projetos

--- a/src/app/modules/project/pages/projects/projects.component.html
+++ b/src/app/modules/project/pages/projects/projects.component.html
@@ -2,4 +2,7 @@
    <ng-container searchInput>
       <app-search-input placeholder="Buscar projetos"></app-search-input>
    </ng-container>
+   <ng-container addButton>
+      <app-add-button titleValue="Adicionar projeto" [smaller]="true"></app-add-button>
+   </ng-container>
 </app-sidebar>
