feat: Configurando a rota do routerLinkValue

--- a/src/app/modules/project/pages/projects/projects.component.html
+++ b/src/app/modules/project/pages/projects/projects.component.html
@@ -3,6 +3,6 @@
       <app-search-input placeholder="Buscar projetos"></app-search-input>
    </ng-container>
    <ng-container addButton>
-      <app-add-button titleValue="Adicionar projeto" [smaller]="true"></app-add-button>
+      <app-add-button routerLinkValue="../criar-projeto" titleValue="Criar projeto" [smaller]="true"></app-add-button>
    </ng-container>
 </app-sidebar>
