--- a/src/app/modules/project/pages/projects/projects.component.html
+++ b/src/app/modules/project/pages/projects/projects.component.html
@@ -5,4 +5,9 @@
    <ng-container addButton>
       <app-add-button routerLinkValue="../criar-projeto" titleValue="Criar projeto" [smaller]="true"></app-add-button>
    </ng-container>
+   <ng-container content>
+      <div class="project-list flex-column">
+         <app-sidebar-project-card *ngFor="let project of projectList; trackBy: trackByService.track" [project]="project"></app-sidebar-project-card>
+      </div>
+   </ng-container>
 </app-sidebar>
