--- a/src/app/modules/project/components/sidebar-project-card/sidebar-project-card.component.html
+++ b/src/app/modules/project/components/sidebar-project-card/sidebar-project-card.component.html
@@ -3,7 +3,7 @@
       <img src="https://cdn.pixabay.com/photo/2021/06/24/11/18/background-6360865_1280.png" alt="Imagem do projeto">
       <div class="content flex-column">
          <h3>{{project.name}}</h3>
-         <span>{{project.createAt | date: 'dd/MM/yyyy'}}</span>
+         <span>{{project.createAt | date: 'dd/mm/yyyy'}}</span>
          <p>{{project.description}}</p>
       </div>
    </button>
