feat: Ajustando alguns espaçamentos

--- a/src/app/modules/project/components/sidebar-project-card/sidebar-project-card.component.scss
+++ b/src/app/modules/project/components/sidebar-project-card/sidebar-project-card.component.scss
@@ -29,6 +29,8 @@ button {
     overflow: hidden;
     display: grid;
     gap: 0 6px;
+    justify-content: space-between;
+    text-align: left;
     grid-template-columns: 1fr min-content;
 
     * {
