--- a/src/app/modules/project/components/sidebar-project-card/sidebar-project-card.component.html
+++ b/src/app/modules/project/components/sidebar-project-card/sidebar-project-card.component.html
@@ -1,4 +1,4 @@
-<a>
+<a [routerLink]="project.id">
    <button class="flex align">
       <img src="https://cdn.pixabay.com/photo/2021/06/24/11/18/background-6360865_1280.png" alt="Imagem do projeto">
       <div class="content flex-column">
