--- a/src/app/shared/components/sidebars/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebars/sidebar/sidebar.component.scss
@@ -6,7 +6,7 @@
 
 aside {
   height: 100%;
-  border-left: 1px solid $color-secondary-900;
+  border-right: 1px solid $color-secondary-900;
   background-color: $color-secondary-700;
   width: 280px;
 
