feat: Adicionando o botão de logout da IconsSidebarComponent

--- a/src/app/modules/core/components/icons-sidebar/icons-sidebar.component.html
+++ b/src/app/modules/core/components/icons-sidebar/icons-sidebar.component.html
@@ -2,25 +2,28 @@
    <nav>
       <ul class="flex-column align">
          <li>
-            <a routerLink="projetos" routerLinkActive="active">
+            <a title="Projetos" routerLink="projetos" routerLinkActive="active">
                <fa-icon [icon]="['far', 'chart-bar']"></fa-icon>
             </a>
          </li>
          <li>
-            <a routerLink="tarefas" routerLinkActive="active">
+            <a title="Tarefas" routerLink="tarefas" routerLinkActive="active">
                <fa-icon icon="list-check"></fa-icon>
             </a>
          </li>
          <li>
-            <a routerLink="notificacoes" routerLinkActive="active">
+            <a title="Notificações" routerLink="notificacoes" routerLinkActive="active">
                <fa-icon [icon]="['far', 'bell']"></fa-icon>
             </a>
          </li>
       </ul>
    </nav>
    <div class="config">
-      <a routerLinkActive="active">
+      <a title="Configurações" routerLinkActive="active">
          <fa-icon icon="gear"></fa-icon>
       </a>
+      <button (click)="currentUserService.logOut()" title="Sair" class="exit-button">
+         <fa-icon icon="arrow-right-from-bracket"></fa-icon>
+      </button>
    </div>
 </aside>
