feat: Finalizando as variações de estilo do TaskTitleComponent

--- a/src/app/shared/components/task-title/task-title.component.html
+++ b/src/app/shared/components/task-title/task-title.component.html
@@ -1,4 +1,4 @@
-<div class="box-task-title">
+<div class="box-task-title" [class]="task?.criticality">
    <h3>{{task?.title}}</h3>
    <span>{{task?.completedAt | date: 'dd/mm/yyyy'}}</span>
 </div>
