refactor: Atualizando alguns estilos

--- a/src/app/shared/components/single-container/single-container.component.html
+++ b/src/app/shared/components/single-container/single-container.component.html
@@ -1,5 +1,5 @@
 <section class="flex align">
-   <app-card-container [noPadding]="true" class="card-container">
+   <app-card-container [padding]="0" class="card-container">
        <div class="card-head">
            <app-arrow-redirect></app-arrow-redirect>
        </div>
