--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -24,9 +24,9 @@ $color-base-400: #6e6e6e;
 $color-base-500: #5f5f5f;
 $color-base-600: #4d4d4d;
 
-$color-success-light: #81ac6515;
-$color-success: #81ac65;
-$color-success-strong: #5e8146;
+$color-success-light: #06ac931e;
+$color-success: #06ac93;
+$color-success-strong: #046153;
 
 $color-warn-light: #ae383821;
 $color-warn: #e21212;
