--- a/src/app/modules/task/pages/task-details/task-details.component.scss
+++ b/src/app/modules/task/pages/task-details/task-details.component.scss
@@ -1,7 +1,9 @@
 @import 'variables';
 
 :host {
-  display: block;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .topic {
@@ -15,4 +17,8 @@
     font-size: $text-base;
     font-weight: 500;
   }
+}
+
+.content {
+  flex: 1;
 }
