--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -18,7 +18,7 @@ $color-secondary-700: #323a47;
 $color-secondary-900: #191F25;
 
 $color-base-100: white;
-$color-base-200: #fffefc;
+$color-base-200: #e9e9e9;
 $color-base-300: #e7e7e7;
 $color-base-400: #6e6e6e;
 $color-base-500: #5f5f5f;
