feat: Recebendo as actions no MemberCardComponent

--- a/src/app/shared/components/list-of-members/list-of-members.component.html
+++ b/src/app/shared/components/list-of-members/list-of-members.component.html
@@ -1,3 +1,4 @@
 <app-card-container [padding]="6">
-    <app-member-card [fullWidth]="true" *ngFor="let user of userList" [user]="user"></app-member-card>
+    <app-member-card [fullWidth]="true" *ngFor="let user of userList" [user]="user">
+    </app-member-card>
 </app-card-container>
