--- a/src/app/shared/components/member-card/member-card.component.scss
+++ b/src/app/shared/components/member-card/member-card.component.scss
@@ -19,12 +19,13 @@ button {
   }
   
   .content {
+    grid-template-columns: 1fr min-content;
+    justify-content: space-between;
     overflow: hidden;
+    text-align: left;
     display: grid;
     gap: 0 6px;
-    justify-content: space-between;
-    text-align: left;
-    grid-template-columns: 1fr min-content;
+    flex: 1;
 
     * {
       font-family: $font-family-tertiary;
