--- a/src/app/modules/task/pages/task-info/task-info.component.scss
+++ b/src/app/modules/task/pages/task-info/task-info.component.scss
@@ -2,6 +2,11 @@
 
 :host {
   display: block;
+  height: calc(100vh - 81.99px);
+}
+
+.task-info-template {
+  flex: 1;
 }
 
 section {
@@ -24,5 +29,12 @@ section {
 .container-task-actions {
   background-color: $color-secondary-100;
   padding: 15px;
-  height: 100%;
+  min-height: 100%;
+  gap: 15px;
+  border-left: 1px solid $color-base-300;
+  width: 100%;
+
+  .action-card-container {
+    gap: 10px;
+  }
 }
