--- a/src/app/modules/auth/components/templates/auth-template/auth-template.component.scss
+++ b/src/app/modules/auth/components/templates/auth-template/auth-template.component.scss
@@ -7,11 +7,12 @@
 section {
   background-color: $color-base-200;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 65px 0;
 
   .card-container {
     max-width: 375px;
-    
+
     .card-head {
       padding: 10px 13px 7px;
     }
