feat: Configurando a versão do loader no ButtonMainActionComponent

--- a/src/app/shared/components/buttons/button-main-action/button-main-action.component.html
+++ b/src/app/shared/components/buttons/button-main-action/button-main-action.component.html
@@ -1,3 +1,4 @@
 <button (click)="onCLick.emit()" [class.full-width]="fullWidth">
-    <ng-content></ng-content>
+    <app-loader [loaderToButton]="loading" *ngIf="loading"></app-loader>
+    <ng-content *ngIf="!loading"></ng-content>
 </button>
