--- a/src/app/shared/components/buttons/button-main-action/button-main-action.component.scss
+++ b/src/app/shared/components/buttons/button-main-action/button-main-action.component.scss
@@ -4,9 +4,23 @@
   display: block;
 }
 
+@mixin defaultProperties ($color) {
+  background-color: $color;
+
+  &:hover {
+    background-color: darken($color: $color, $amount: 4%);
+    cursor: pointer;
+  }
+
+  &:active {
+    filter: brightness(0.8);
+    transform: translateY(2px)
+  }
+}
+
 button {
+  @include defaultProperties($color-secondary-700);
   appearance: none;
-  background-color: $color-secondary-700;
   color: $color-base-100;
   border: 0;
   font-family: $font-family-tertiary;
@@ -14,14 +28,9 @@ button {
   font-weight: 700;
   padding: 11px 15px;
   font-size: $text-base;
-  transition: 0.2s ease;
+  transition: 0.1s ease;
 
   &.full-width {
     width: 100%;
-  }
-
-  &:hover {
-    cursor: pointer;
-    transform: translateY(-1px);
   }
 }
