--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -28,6 +28,6 @@
         </app-message-panel>
     </ng-container>
     <ng-container buttons>
-        <app-button-main-action (onCLick)="onSubmit()" [fullWidth]="true">CADASTRAR</app-button-main-action>
+        <app-button-main-action [loading]="(loaderService.isLoading$ | async)!" (onCLick)="onSubmit()" [fullWidth]="true">CADASTRAR</app-button-main-action>
     </ng-container>
 </app-auth-template>
