feat: Adicionando o status a SidebarTaskCardComponent

--- a/src/app/modules/task/components/sidebar-task-card/sidebar-task-card.component.html
+++ b/src/app/modules/task/components/sidebar-task-card/sidebar-task-card.component.html
@@ -3,5 +3,6 @@
    <p>{{task.description}}</p>
    <div class="flex align">
       <span>categoria</span>
+      <app-task-status [status]="task.status"></app-task-status>
    </div>
 </a>
