--- a/src/app/shared/components/profile-image-input/profile-image-input.component.html
+++ b/src/app/shared/components/profile-image-input/profile-image-input.component.html
@@ -1,22 +1,18 @@
 <label
-  appDropZone
-  [for]="idValue"
   class="flex align"
   title="Selecionar arquivo"
   [class.valid]="!!currentFile"
   [style.minHeight.px]="minHeight"
-  (fileDropped)="onFileDropped($event)"
 >
-  <div @changeState *ngIf="!currentFile" class="content-label">
-    <input (change)="onFileDropped($event)" #inputFile [id]="idValue" type="file" />
+  <div *ngIf="!currentFile" class="content-label">
+    <input (change)="onFileDropped($event)" [id]="idValue" type="file" />
   </div>
-  <div @changeState *ngIf="currentFile" class="content-label with-file">
-    <!-- <app-close
-      (click)="onRemoveFile()"
-      class="close"
-    ></app-close>
-    <fa-icon icon="file-circle-check"/>
-    <span>Arquivo selecionado:</span>
-    <span>{{ currentFile.name }}</span> -->
+  <div *ngIf="currentFile" class="content-label with-file">
+    <img [src]="imageUrl" alt="Imagem do projeto">
+    <button type="button" (click)="onRemoveFile($event)" title="Remover imagem" class="remove-image flex align">
+      <div class="flex align">
+        <fa-icon icon="xmark"></fa-icon>
+      </div>
+    </button>
   </div>
 </label>
