--- a/src/app/shared/components/profile-image-input/profile-image-input.component.scss
+++ b/src/app/shared/components/profile-image-input/profile-image-input.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import "variables";
 
 @mixin defaultColors($border, $shadow) {
   border-color: $border;
@@ -14,7 +14,7 @@ label {
   background-color: #f9f9f9;
   position: relative;
   overflow: hidden;
-  background-image: url('../../../../assets/images/camera.png');
+  background-image: url("../../../../assets/images/camera.png");
   background-repeat: no-repeat;
   background-size: 35%;
   aspect-ratio: 1/1;
@@ -34,17 +34,57 @@ label {
     input {
       display: none;
     }
+
+    &.with-file {
+      position: relative;
+
+      > * {
+        width: 100%;
+        aspect-ratio: 1/1;
+      }
+
+      img {
+        object-fit: cover;
+      }
+
+      button.remove-image {
+        background-color: rgba(0, 0, 0, 0.432);
+        justify-content: center;
+        border: 0;
+        position: absolute;
+        top: 0;
+        opacity: 0;
+        left: 0;
+        transition: 200ms ease;
+        z-index: 1;
+
+        div {
+          aspect-ratio: 1/1;
+          background-color: black;
+          color: white;
+          font-size: 18px;
+          justify-content: center;
+          border-radius: 50%;
+          width: 34px;
+        }
+
+        &:hover {
+          cursor: pointer;
+          opacity: 1;
+        }
+      }
+    }
   }
 }
 
 .invalid {
-  @include defaultColors($color-warn, $color-warn-light)
+  @include defaultColors($color-warn, $color-warn-light);
 }
 
 .valid {
-  @include defaultColors($color-success, $color-success-light)
+  @include defaultColors($color-success, $color-success-light);
 }
 
 .dragOver {
-  @include defaultColors($color-primary-700, $color-primary-200)
+  @include defaultColors($color-primary-700, $color-primary-200);
 }
