--- a/src/app/modules/create-project/pages/create-project/create-project.component.html
+++ b/src/app/modules/create-project/pages/create-project/create-project.component.html
@@ -1,4 +1,5 @@
 <app-single-container [noPadding]="true">
+   {{projectService.projectInputSig() | json}}
    <app-title-1 class="title">Criar Projeto</app-title-1>
    <div class="content">
       <router-outlet></router-outlet>
