feat: Tratando as imagens recebidas da api no ProfileImageComponent

--- a/src/app/shared/components/profile-image/profile-image.component.html
+++ b/src/app/shared/components/profile-image/profile-image.component.html
@@ -1,1 +1,1 @@
-<img [class.smaller]="smaller" [src]="src" alt="Imagem do projeto">
+<img [class.smaller]="smaller" [src]="url" alt="Imagem do projeto">
