--- a/src/app/shared/components/single-container/single-container.component.html
+++ b/src/app/shared/components/single-container/single-container.component.html
@@ -1,11 +1,11 @@
 <section class="flex align">
-   <app-card-container [padding]="0" class="card-container">
-       <div class="card-head">
-           <app-arrow-redirect></app-arrow-redirect>
-       </div>
-       <app-separator-row></app-separator-row>
-       <div class="content" [style.padding.px]="noPadding ? 0 : 25">
-           <ng-content></ng-content>
-       </div>
-   </app-card-container>
+    <app-card-container [maxHeight]="true" [padding]="0" class="card-container">
+        <div class="card-head">
+            <app-arrow-redirect></app-arrow-redirect>
+        </div>
+        <app-separator-row></app-separator-row>
+        <div class="content" [style.padding.px]="noPadding ? 0 : 25">
+            <ng-content></ng-content>
+        </div>
+    </app-card-container>
 </section>
