--- a/src/app/shared/components/card-container/card-container.component.html
+++ b/src/app/shared/components/card-container/card-container.component.html
@@ -1,3 +1,3 @@
-<div [style.padding.px]="padding ?? 25">
+<div [class.max-height]="maxHeight" [style.padding.px]="padding ?? 25">
     <ng-content></ng-content>
 </div>
